[tool.poetry]
name = "bysondb"
version = "0.1.0"
description = "A simple BSON database written in Python"
authors = ["Patrick Brennan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
